--- a/style.css
+++ b/style.css
@@ -12,13 +12,28 @@ body, html {
     /* cursor: none; */
 }
 
-#cursor {
+body {
+    overflow: hidden;
+}
+
+/* #cursor {
     height: 2.5vw;
     width: 2.5vw;
     border-radius: 50%;
-    border: 1px solid #ffffff7e;
     position: fixed;
+    border: 3px solid #fff;
+    mix-blend-mode: difference;
+} */
+
+.mousefollower {
+    /* height: 2.5vw;
+    width: 2.5vw;
+    border-radius: 50%; */
+    border: 3px solid #fff;
+    background-color: #fff;
+    /* position: fixed; */
     z-index: 99;
+    scale: 2;
     mix-blend-mode: difference;
 }
 
@@ -26,7 +41,7 @@ body, html {
     height: 100%;
     width: 100%;
     position: fixed;
-    z-index: 99;
+    z-index: 9999999;
     background-color: #0B0B0B;
     padding: 18vh 8vw;
 }
@@ -169,6 +184,7 @@ body, html {
     font-size: 7.3vw;
     line-height: 7.5vw;
     letter-spacing: 0.1vw;
+    z-index: 999;
     /* font-weight: 600; */
 }
 
@@ -185,6 +201,7 @@ body, html {
 #hero3 {
     display: flex;
     align-items: center;
+    width: 55%;
 }
 
 #hero3 h2 {
@@ -226,6 +243,8 @@ body, html {
     position: relative;
     left: 28%;
     background-image: url(https://obys.agency/wp-content/uploads/2022/11/Showreel-2022-preview-1.jpg);
+    background-size: cover;
+    background-position: center;
 }
 
 #video-container img {
@@ -239,6 +258,7 @@ body, html {
     height: 100%;
     width: 100%;
     object-fit: cover;
+    opacity: 0;
 }
 
 #video-cursor {
@@ -262,9 +282,145 @@ body, html {
 #page3 {
     min-height: 100vh;
     width: 100%;
-    background-color: rgb(75, 71, 71);
+    background-color: #151515;
     position: relative;
+    padding: 5vh 2vw;
 }
+
+#page3 h1 {
+    font-size: 7vw;
+    text-transform: uppercase;
+    position: relative;
+    margin-left: 28%;
+}
+
+#page3 h1::before {
+    content: "02";
+    position: absolute;
+    font-size: 3.2vw;
+    font-family: "silk serif";
+    font-weight: 300;
+    left: -15%;
+    top: 5%;
+}
+
+#page3 .underline {
+    height: 1px;
+    width: 100%;
+    background-color: #ffffff9a;
+    margin: 5vw 0;
+    margin-left: 28%;
+}
+
+#image-div-container {
+    /* background-color: rgb(220, 109, 127); */
+    padding: 1vw;
+    position: relative;
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+}
+
+.image-div {
+    height: 38vw;
+    width: 29vw;
+    /* background-color: #3F7DF4; */
+    position: relative;
+    overflow: hidden;
+    flex-shrink: 0;
+    margin: 1vw;
+}
+
+.image-div:nth-child(1){
+    height: 30vw;
+    width: 22vw;
+}
+
+.image-div img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    object-position: center ;
+}
+
+.page3-circle1{
+    height: 23vw;
+    width: 23vw;
+    position: relative;
+    border: 2px solid #fff;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 24vh;
+    margin-left: 10vw;
+}
+
+.page3-circle1 svg {
+    height: 30%;
+}
+
+.page3-circle2{
+    height: 23vw;
+    width: 23vw;
+    position: relative;
+    border: 2px solid #fff;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.page3-circle2 svg {
+    height: 30%;
+    rotate: -45deg;
+}
+
+.circle-in {
+    height: 100%;
+    width: 100%;
+    border-radius: 50%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    scale: 0;
+    transition: all ease 0.5s;
+    transition-delay: 0.2s;
+}
+
+.circle-in p{
+    color: #000;
+    font-size: 1vw;
+    font-weight: 800;
+    scale: 0;
+    transition: all ease 0.5s;
+    transition-delay: 0.5s;
+    opacity: 0;
+}
+
+.page3-circle1:hover .circle-in {
+    scale: 1;
+}
+
+.page3-circle1:hover p {
+    scale: 1;
+    opacity: 1;
+}
+
+.page3-circle2:hover .circle-in {
+    scale: 1;
+}
+
+.page3-circle2:hover p {
+    scale: 1;
+    opacity: 1;
+}
+
 
 #page4 {
     min-height: 100vh;
@@ -433,7 +589,19 @@ span {
     text-transform: uppercase;
     padding-bottom: 4vw;
     position: relative;
+    /* transition: all linear 0.3s; */
 }
+
+/* #footer h1:hover {
+    font-family: "silk serif";
+    font-size: 7.5vw;
+    text-transform: uppercase;
+    -webkit-text-stroke: 1px #fff;
+    font-weight: 400;
+    color: transparent;
+    padding-bottom: 1vw;
+} */
+
 
 #footer h1::before {
     content: "04";
@@ -478,4 +646,511 @@ span {
 
 #footer>h5 {
     font-size: 1.1vw;
+}
+
+._canvas_container {
+    z-index: 999999 !important;
+    pointer-events: none;
+}
+
+#flag {
+    height: 30vw;
+    position: absolute;
+    top: 0;
+    left: 0;
+    transform: translate(-50%, -50%);
+    opacity: 0;
+    z-index: 99;
+}
+
+#hero3 {
+    position: relative;
+    z-index: 999
+}
+
+@media (max-width: 600px) {
+
+    body {
+        overflow-x: hidden;
+    }
+    
+    #page1 {
+        height: 45vh;
+        width: 100vw;
+        background-color: #151515;
+        padding-top: 1px;
+    }
+    
+    #page1 #nav {
+        padding: 5.5vw 6.5vw;
+        display: flex;
+        align-items: center;
+        justify-content: flex-end;
+        position: fixed;
+        top: 0;
+        width: 100%;
+        /* background-color: red; */
+    }
+
+    #nav svg {
+        scale: 0.7;
+    }
+    
+    #nav-part2 {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        gap: 3vw;
+        display: none;
+    }
+    
+    #nav-part2 h4 {
+        font-size: 1vw;
+        font-weight: 500;
+    }
+    
+    .hero {
+        width: 72%;
+        margin-left: 5%;
+        height: fit-content;
+        overflow: hidden;
+    }
+    
+    .hero:nth-child(2) {
+        margin-top: 20vh;
+    }
+    
+    .hero h1{
+        text-transform: uppercase;
+        font-size: 9.3vw;
+        line-height: 9vw;
+        letter-spacing: 0.1vw;
+        z-index: 999;
+        font-weight: 900;
+    }
+    
+    #hero1::before {
+        content: "01";
+        position: absolute;
+        font-size: 4vw;
+        font-family: "silk serif";
+        font-weight: 900;
+        left: 5%;
+        top: 35%;
+    }
+    
+    #hero3 {
+        display: flex;
+        align-items: center;
+        width: 70%;
+    }
+    
+    #hero3 h2 {
+        text-transform: uppercase;
+        font-size: 9.3vw;
+        line-height: 9vw;
+        letter-spacing: 0.1vw;
+        border-bottom: 0.5vw solid #fff;
+        transition: color 0.2s ease;
+        padding-bottom: 0.3vw;
+    }
+    
+    .hero h3{
+        text-transform: uppercase;
+        font-size: 8vw;
+        line-height: 7.5vw;
+        letter-spacing: 0.4vw;
+        padding-left: 0.1 vw;
+    }
+
+    #page2 {
+        height: 65vh;
+        width: 100vw;
+        background-color: #151515;
+        padding-top: 6vh;
+        position: relative;
+    }
+    
+    #video-container {
+        height: 48vh;
+        width: 100vw;
+        position: relative;
+        left: 0%;
+        background-image: url(https://obys.agency/wp-content/uploads/2022/11/Showreel-2022-preview-1.jpg);
+        background-size: cover;
+        background-position: center;
+    }
+    
+    #video-container img {
+        height: 100%;
+        width: 100%;
+        object-fit: cover;
+        position: absolute;
+    }
+    
+    #video-container video {
+        height: 100%;
+        width: 100%;
+        object-fit: cover;
+        opacity: 0;
+    }
+    
+    #video-cursor {
+        height: 25vw;
+        width: 25vw;
+        border-radius: 50%;
+        background-color: #FEA63C;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        z-index: 9;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    
+    #video-cursor i {
+        font-size: 4vw;
+    }
+
+    #page3 {
+        min-height: 100vh;
+        width: 100%;
+        background-color: #151515;
+        position: relative;
+        padding: 5vh 2vw;
+    }
+    
+    #page3 h1 {
+        font-size: 10vw;
+        text-transform: uppercase;
+        position: relative;
+        margin-left: 2%;
+    }
+    
+    #page3 h1::before {
+        content: "02";
+        position: absolute;
+        font-size: 4.2vw;
+        font-family: "silk serif";
+        font-weight: 300;
+        left: 0%;
+        top: -40%;
+        padding-bottom: 2vw;
+    }
+    
+    #page3 .underline {
+        height: 1.5px;
+        width: 94%;
+        background-color: #ffffff9a;
+        margin: 5vw 0;
+        margin-left: 3%;
+    }
+    
+    #image-div-container {
+        /* background-color: rgb(220, 109, 127); */
+        margin-top: 10vw;
+        padding: 1vw;
+        position: relative;
+        display: flex;
+        align-items: flex-start;
+        justify-content: flex-start;
+        flex-wrap: wrap;
+        flex-direction: column;
+    }
+    
+    .image-div {
+        height: 110vw;
+        width: 92.5vw;
+        /* background-color: #3F7DF4; */
+        position: relative;
+        overflow: hidden;
+        flex-shrink: 0;
+        margin: 1vw;
+        margin-bottom: 5vw;
+    }
+    
+    .image-div:nth-child(1){
+        height: 110vw;
+        width: 92.5vw;
+    }
+    
+    .image-div img {
+        height: 100%;
+        width: 100%;
+        object-fit: cover;
+        object-position: center ;
+    }
+    
+    .page3-circle1{
+        height: 23vw;
+        width: 23vw;
+        position: relative;
+        border: 2px solid #fff;
+        border-radius: 50%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-top: 24vh;
+        margin-left: 10vw;
+        display: none;
+    }
+    
+    .page3-circle1 svg {
+        height: 30%;
+    }
+    
+    .page3-circle2{
+        height: 23vw;
+        width: 23vw;
+        position: relative;
+        border: 2px solid #fff;
+        border-radius: 50%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        display: none;
+    }
+    
+    #page4 {
+        min-height: 100vh;
+        width: 100%;
+        background-color: #151515;
+        position: relative;
+        padding: 3vh 5vw;
+    }
+    
+    #page4-content {
+        width: 90vw;
+        position: relative;
+        margin-left: 0%;
+    }
+    
+    #page4-content h1 {
+        font-size: 10vw;
+        text-transform: uppercase;
+        position: relative;
+        /* margin-left: 2%; */
+    }
+    
+    #page4-content h1::before {
+        content: "03";
+        position: absolute;
+        font-size: 4.2vw;
+        font-family: "silk serif";
+        font-weight: 300;
+        left: 0%;
+        top: -50%;
+        padding-bottom: 2vw;
+    }
+    
+    #page4-content .underline {
+        height: 1.5px;
+        width: 100%;
+        background-color: #ffffff9a;
+        margin: 5vw 0 10vw 0;
+    }
+    
+    #page4-content>p {
+        font-size: 5.5vw;
+        width: 90%;
+        margin-bottom: 4vw;
+    }
+    
+    #page4-flex {
+        display: flex;
+        flex-direction: column;
+    }
+    
+    #page4-flex img {
+        width: 100%;
+        margin: 5vw 0 8vw 0;
+    }
+    
+    #page4-flex p {
+        font-size: 3.5vw;
+        width: 90%;
+        margin-left: 0vw;
+        margin-bottom: 6vw;
+        line-height: 1.5;
+    }
+    
+    #page4-bluediv {
+        background-color: #3F7DF4;
+        width: 90vw;
+        padding: 3vw 3vw 10vw 3vw;
+        position: relative;
+        margin-top: 0vw;
+        margin-left: 0vw;
+    }
+    
+    .elem {
+        display: flex;
+        align-items: flex-start;
+        justify-content: space-between;
+        padding: 7.3vw 0;
+        border-bottom: 1px solid #ffffff9e;
+    }
+    
+    .elem h4 {
+        font-size: 4.4vw;
+        font-weight: 600;
+    }
+    
+    .elem p {
+        width: 50%;
+        font-size: 3vw;
+        margin-left: 3vw;
+    }
+
+    #page4-content .underline:nth-last-child(1) {
+        height: 1.5px;
+        margin: 20vw 0 8vw 0;
+    }
+
+    #page5 {
+        min-height: 40vh;
+        width: 100%;
+        background-color: #151515;
+    }
+    
+    .marquee {
+        overflow-x: hidden;
+        white-space: nowrap;
+        display: flex;
+        margin-bottom: -3vw;
+    }
+    
+    .m {
+        display: flex;
+        gap: 1vw;
+        animation: marq 25s linear infinite;
+        padding: 0 0.5vw;   
+        margin-bottom: -0.5vw;
+    }
+    
+    .m p {
+        font-size: 10vw;
+        text-transform: uppercase;
+        -webkit-text-stroke: 1px #fff;
+        font-weight: 400;
+        color: transparent;
+    }
+    
+    .marquee2 {
+        overflow-x: hidden;
+        white-space: nowrap;
+        display: flex;
+        margin-bottom: -3vw;
+    }
+    
+    .m2 {
+        display: flex;
+        gap: 1vw;
+        animation: marq 25s linear infinite reverse;
+        padding: 0 0.5vw;
+        margin-bottom: -0.5vw;
+    }
+    
+    .m2 p {
+        font-size: 10vw;
+        text-transform: uppercase;
+        -webkit-text-stroke: 1px #fff;
+        font-weight: 400;
+        color: transparent;
+    }
+    
+    span {
+        font-style: italic;
+        color: transparent;
+        font-family: "silk serif";
+        position: relative;
+        bottom: 8%;
+    }
+    
+    @keyframes marq {
+        0% {
+            transform: translateX(0);
+        }
+        100% {
+            transform: translateX(-100%);
+        }
+    }
+    
+    #footer {
+        height: 73vh;
+        width: 100%;
+        padding: 5vw 5vw;
+    }
+    
+    #footer h1 {
+        font-size: 10vw;
+        text-transform: uppercase;
+        position: relative;
+        margin-left: 0;
+    }
+    
+    /* #footer h1:hover {
+        font-family: "silk serif";
+        font-size: 7.5vw;
+        text-transform: uppercase;
+        -webkit-text-stroke: 1px #fff;
+        font-weight: 400;
+        color: transparent;
+        padding-bottom: 1vw;
+    } */
+    
+    
+    #footer h1::before {
+        content: "04";
+        position: absolute;
+        font-size: 4.2vw;
+        font-family: "silk serif";
+        font-weight: 300;
+        left: 0%;
+        top: -50%;
+        padding-bottom: 2vw;
+    }
+    
+    .underline {
+        height: 1.5px;
+        width: 100%;
+        background-color: #ffffffbf;
+        margin: 5vw 0;
+    }
+    
+    #footer-div {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 8vw;
+        justify-content: space-between;
+        padding-right: 15vw;
+        padding-top: 4vw;
+        padding-bottom: 7vw;
+    }
+    
+    #footer-div h6 {
+        font-size: 4vw;
+        padding-bottom: 3vw;
+    }
+    
+    .box {
+        width: 30%;
+    }
+
+    #footer-div #address {
+        width: 100%;
+    }
+    
+    #footer-div h5 {
+        font-size: 5.5vw;
+        line-height: 1;
+    }
+    
+    #footer>h5 {
+        font-size: 3.6vw;
+    }
+   
 }
